# minimax

./: Cargo.toml  LICENSE  README.md
.config/: config.json5
.github/workflows/: cd.yml
djinn/: .envrc  Cargo.toml  build.rs
djinn-minimax/: Cargo.toml
djinn-minimax/src/: lib.rs
djinn-py/: Cargo.toml  pyproject.toml
djinn-py/python_abc/: game.pyi  minimax.pyi
djinn-py/src/: lib.rs
djinn/.config/: config.json5
djinn/src/: action.rs  app.rs  config.rs  games.rs  main.rs
djinn/src/components/: game_menu.rs  game_screen.rs  gamecard.rs
djinn/src/games/: chess.rs  tictactoe.rs
djinn/src/plugins/: python.rs
python-plugin/: hex.py
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  games.rs  main.rs  minimax.rs  tui.rs
src/components/: game_menu.rs  game_screen.rs  gamecard.rs  home.rs
src/games/: chess.rs  tictactoe.rs
