[package]
name = "minimax"
version = "0.1.0"
edition = "2021"
description = "A project demonstrating the minimax algorithm with several games"
authors = ["Terpsichord <103211495+Terpsichord@users.noreply.github.com>"]
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_builder = "0.20.1"
derive_deref = "1.1.1"
directories = "5.0.1"
dyn-clone = "1.0.17"
futures = "0.3.30"
human-panic = "2.0.1"
itertools = "0.13.0"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.158"
num-derive = "0.4.2"
num-traits = "0.2.19"
phf = { version = "0.11.2", features = ["macros"] }
pretty_assertions = "1.4.0"
ratatui = { version = "0.28.1", features = ["serde", "macros"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
shakmaty = "0.27.2"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui-textarea = "0.6.1"
tui-widgets = { version = "0.3.0", default-features = false, features = ["popup"] }

[build-dependencies]
anyhow = "1.0.86"
vergen-gix = { version = "1.0.0", features = ["build", "cargo"] }
